# webcam-py

./: .gitignore  Cargo.toml  demo.py  pyproject.toml
examples/: record.rs
src/: lib.rs
