[package]
name = "webcam-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "webcam_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
glib = { version = "0.19.0"}
gstreamer = {version = "0.21.2"}
gstreamer-app = {version = "0.21.2"}
gstreamer-pbutils = "0.21.2"

